# ray_tracing

./: CMakeLists.txt  Makefile  README.md  main.cpp
lib/: constants.hpp  interval.hpp  material.hpp  objects.hpp  ray.hpp  render.hpp  utility.hpp  vector3d.hpp
src/: material.cpp  objects.cpp  render.cpp  utility.cpp  vector3d.cpp
tests/: vector3d-unittest.cpp
